# AI-code-assist

./: README.md
ai_code_generator_v1_crewai-project/: README.md  pyproject.toml
ai_code_generator_v1_crewai-project/src/ai_code_generator/: crew.py  main.py
ai_code_generator_v1_crewai-project/src/ai_code_generator/config/: agents.yaml  tasks.yaml
ai_code_generator_v1_crewai-project/src/ai_code_generator/tools/: code_analysis_tool.py
