[project]
name = "ai_code_generator"
version = "0.1.0"
description = "ai_code_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
ai_code_generator = "ai_code_generator.main:run"
run_crew = "ai_code_generator.main:run"
train = "ai_code_generator.main:train"
replay = "ai_code_generator.main:replay"
test = "ai_code_generator.main:test"
run_with_trigger = "ai_code_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
